# gymbag-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  load_benchmark.py  pyproject.toml
gymbag_rs/: __init__.py  gymbag_rs.pyi
src/: decode.rs  game.rs  lib.rs  proto_defaults.rs  py.rs
src/Recording/: Frame.proto
src/Recording/Common/: MapType.proto  PositionData.proto  RoleType.proto  SystemType.proto  TaskType.proto  UsableType.proto  Vector2.proto
src/Recording/DeadBodies/: DeadBodiesFrame.proto  DeadBodyData.proto
src/Recording/Header/: HeaderFrame.proto
src/Recording/LocalPlayer/: LocalPlayerFrame.proto  UsableData.proto
src/Recording/Map/: DoorData.proto  MapFrame.proto  VentData.proto
src/Recording/OtherPlayers/: OtherPlayerData.proto  OtherPlayersFrame.proto
src/Recording/Tasks/: TaskData.proto  TasksFrame.proto
