[package]
name = "gymbag"
version = "0.1.0"
edition = "2021"
authors = ["owobred <29340449+owobred@users.noreply.github.com>"]
license = "MIT"

[lib]
name = "gymbag_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
bytes = "1.4.0"
prost = "0.11.9"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde-pickle = "1.1.1"

[build-dependencies]
prost-build = "0.11.9"
