[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gymbag_rs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "gymbag-rs"
version = "0.1.0"
description = ""
authors = ["owobred <29340449+owobred@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "gymbag_rs" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
maturin = "^1.0.0"


[tool.maturin]
features = ["pyo3/extension-module"]
